<resources>
    <string name="app_name">TPF_PAII_Android</string>

    <!-- LOGIN -->
    <string name="txtLogin">Login</string>
    <string name="txtUsuario"> Usuario</string>
    <string name="txtContrasena">********</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="txtNoTieneCuenta">No tienes una cuenta? </string>
    <string name="txtRegistrarse">Regístrate</string>

    <!-- INICIAR REGISTRO-->
    <string name="txtIniciarRegistro">Iniciar Registro</string>
    <string name="txtRegistrarmeComo">Registrarme como : </string>
    <string name="rbEstudiante"> Estudiante</string>
    <string name="rbEmpresa"> Empresa</string>
    <string name="rbTutor"> Tutor</string>
    <string name="btnIniciarRegistro">Iniciar Registro</string>

    <!-- REGISTRAR -->
    <string name="tvRegistrarEmpresa">Registrar Empresa</string>
    <string name="tvRegistrarTutor">Registrar Tutor</string>
    <string name="tvRegistrarEstudiante">Registrar Estudiante</string>
    <string name="tvDatos">Datos</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="txtDNI">DNI</string>
    <string name="txtEdad">Edad</string>
    <string name="txtOcupacion">Ocupación</string>
    <string name="txtPasatiempos">Pasatiempos</string>
    <string name="txtMasSobreVos">Mas sobre vos</string>
    <string name="txtGenero">Género</string>
    <string name="txtDescripcionEmp">Descripcion</string>
    <string name="txtSectorEmp">Sector</string>
    <string name="txtNIdentificacionEmp"> N° de identificación fiscal</string>
    <string name="tvUsuario">Usuario</string>
    <string name="txtNombreUsuario">Nombre de usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtRepetirPass">Repetir contraseña</string>
    <string name="tvContacto">Contacto</string>
    <string name="txtEmail">Email</string>
    <string name="txtNivelEducativo">Nivel educativo</string>
    <string name="txtEstado">Estado</string>
    <string name="txtTelefono">N° de teléfono</string>
    <string name="tvUbicacion">Ubicacion</string>
    <string name="txtLugar">Lugar de trabajo</string>
    <string name="txtCargo">Cargo ocupado</string>
    <string name="txtTareas">Tareas realizadas</string>
    <string name="txtDuracion">Duración</string>
    <string name="txtDireccion">Dirección</string>
    <string name="tvProvincia">Provincia</string>
    <string name="tvLocalidad">Localidad</string>
    <string name="tvEducacion">Educación</string>
    <string name="tvExperienciaLaboral">Experiencia laboral</string>
    <string name="tvInfoAdicional">Info Adicional</string>
    <string name="btnRegistrar">Registrarse</string>

    <string name="TvContraseñaActual">Contraseña Actual:</string>
    <string name="TvNuevaContraseña">Nueva Contraseña: </string>
    <string name="TvRepetirNuevaContraseña">Repetir nueva Contraseña: </string>
    <string name="btnModificar">Modificar</string>
    <string name="btnCancelar">Cancelar</string>

    <!--    estado crear curso-->
    <string-array name="estado_array">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

</resources>