<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.registracion.RegistrarTutor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDatosTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/tvDatos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtNombreTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/txtNombre"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtApellidoTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/txtApellido"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEdadTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/txtEdad"
                android:inputType="number"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGeneroTutor"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/txtGenero"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spGeneroTutorMOD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvInfoAdicionalTutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/tvInfoAdicional"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtOcupacionTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/txtOcupacion"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPasaTiemposTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/txtPasatiempos"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMasSobreTutorMOD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="15sp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txtMasSobreVos"
                android:inputType="textMultiLine"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnModificarTutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="30sp"
                android:text="@string/btnModificar"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvModificarTutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Modificar Tutor"
        android:textColor="#FAF8F8"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>