<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.autenticacion.Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtLogin"
        android:textColor="#F7F8F8F8"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="143dp"
        android:layout_marginTop="140dp"
        android:src="@android:mipmap/sym_def_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txtUsuario"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtContrasena"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="171dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:text="@string/btnIniciarSesion"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasena" />

    <TextView
        android:id="@+id/txtNoTieneCuenta"
        android:layout_width="158dp"
        android:layout_height="26dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:text="@string/txtNoTieneCuenta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <TextView
        android:id="@+id/txtRegistrarse"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_marginTop="56dp"
        android:onClick="Registrarse"
        android:text="@string/txtRegistrarse"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toEndOf="@+id/txtNoTieneCuenta"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />
</androidx.constraintlayout.widget.ConstraintLayout>